--- a/.github/workflows/completion.yml
+++ b/.github/workflows/completion.yml
@@ -12,3 +12,30 @@ jobs:
 
     - name: all entries made
       run: bash ./.github/workflows/check-complete.sh
+      
+    - name : install coverage tool
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y gcovr
+  
+    - name: build
+      run: g++ -Wall -Wextra -fprofile-arcs -ftest-coverage -o testchecker *.c*
+      
+    - name: run
+      run: ./testchecker
+
+    - name: collect coverage
+      run: gcovr --gcov-exclude=".*test.*" -r . --html --html-details -o coverage.html --print-summary
+
+    - name: 'Upload Artifact'
+      uses: actions/upload-artifact@v2
+      with:
+        name: coverage
+        path: ./*.html
+        retention-days: 21
+        
+    - name : Install lizard
+      run: pip install lizard
+      
+    - name: Limit complexity
+      run: $HOME/.local/bin/lizard --exclude "./test/*" --CCN 3
